Add back the auto-refresh for continue working on R2

--- a/P2406-counted-iterator-and-input-iterators.html
+++ b/P2406-counted-iterator-and-input-iterators.html
@@ -1578,6 +1578,7 @@ Possible extra rowspan handling
   text-decoration-color: rgb(255, 0, 0);
 }
 </style>
+  <meta content="5" http-equiv="refresh">
 <style>/* style-autolinks */
 
 .css.css, .property.property, .descriptor.descriptor {
